appId: app.pandapay.pandapay
---
- tapOn: "Skip tour"
- tapOn:
    text: "Account\nAccount"
- scroll
