appId: app.pandapay.pandapay
---
- tapOn:
    text: "Cards\nCards"
- takeScreenshot: v1-cards
- tapOn:
    text: "Insights\nInsights"
- takeScreenshot: v2-insights
- tapOn:
    text: "Account\nAccount"
- takeScreenshot: v3-account
- tapOn: "Import & sync"
- takeScreenshot: v4-import-hub
