appId: app.pandapay.pandapay
---
- tapOn:
    text: "Insights\nInsights"
- scroll
- tapOn: "Needs Review"
- takeScreenshot: r1-needs-review
- tapOn: "Back"
